syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Games.Dtos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "games_enums.proto";

package edoxa.services.games;

message ChallengeScoringDto {
  repeated Item items = 1;

  message Item {
    string statName = 1;
    float statWeighting = 2;
    int32 order = 3;
  }
}

message GameMatchDto {
  string gameUuid = 1;
  google.protobuf.Timestamp gameCreatedAt = 2;
  google.protobuf.Duration gameDuration = 3;
  map<string, double> stats = 4;
  map<string, string> metadata = 5;
}

message GameCredentialDto {
  string userId = 1;
  string playerId = 2;
  EnumGame game = 3;
}